# axum-prisma-starter

./: Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma-cli/src/: main.rs
src/: error.rs  main.rs  prisma.rs  routes.rs
